Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,98 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@article{pugaczewski2017software,
+  title={Software engineering methodology for development of APIs for network management using the MEF LSO framework},
+  author={Pugaczewski, Jack and Cummings, Tara and Hunter, Donald and Michalik, Bartosz},
+  journal={IEEE Communications Standards Magazine},
+  volume={1},
+  number={1},
+  pages={92--96},
+  year={2017},
+  publisher={IEEE}
+}
+
+@article{birk2016evolving,
+  title={Evolving to an SDN-enabled ISP backbone: key technologies and applications},
+  author={Birk, Martin and Choudhury, Gagan and Cortez, Bruce and Goddard, Alvin and Padi, Narayan and Raghuram, Aswatnarayan and Tse, Kathy and Tse, Simon and Wallace, Andrew and Xi, Kang},
+  journal={IEEE Communications Magazine},
+  volume={54},
+  number={10},
+  pages={129--135},
+  year={2016},
+  publisher={IEEE}
+}
+
+@article{lee2015requirements,
+  title={Requirements for abstraction and control of TE networks},
+  author={Lee, Young and Dhody, Dhruv and Belotti, Sergio and Pithewan, Khuzema and Ceccarelli, Daniele},
+  journal={IETF TEAS WG draft, draft-ietf-teas-actn-requirements},
+  year={2015}
+}
+
+@article{vissicchio2017safe,
+	Author = {Vissicchio, Stefano and Vanbever, Laurent and Cittadini, Luca and Xie, Geoffrey G and Bonaventure, Olivier},
+	Date-Added = {2020-05-27 10:46:11 +0200},
+	Date-Modified = {2020-05-27 10:46:19 +0200},
+	Journal = {IEEE/ACM Transactions on Networking},
+	Keywords = {hybrid sdn},
+	Number = {3},
+	Pages = {1649--1662},
+	Publisher = {IEEE},
+	Title = {Safe update of hybrid SDN networks},
+	Volume = {25},
+	Year = {2017}}
+
+
+@article{vissicchio2014opportunities,
+  title={Opportunities and research challenges of hybrid software defined networks},
+  author={Vissicchio, Stefano and Vanbever, Laurent and Bonaventure, Olivier},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={44},
+  number={2},
+  pages={70--75},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
+@book{edelman2018network,
+  title={Network Programmability and Automation: Skills for the Next-Generation Network Engineer},
+  author={Edelman, Jason and Lowe, Scott S and Oswalt, Matt},
+  year={2018},
+  publisher={" O'Reilly Media, Inc."}
+}
+
+@article{bosshart2014p4,
+  title={P4: Programming protocol-independent packet processors},
+  author={Bosshart, Pat and Daly, Dan and Gibb, Glen and Izzard, Martin and McKeown, Nick and Rexford, Jennifer and Schlesinger, Cole and Talayco, Dan and Vahdat, Amin and Varghese, George and others},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={44},
+  number={3},
+  pages={87--95},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{doria2010forwarding,
+  title={Forwarding and Control Element Separation (ForCES) Protocol Specification.},
+  author={Doria, Avri and Salim, Jamal Hadi and Haas, Robert and Khosravi, Hormuzd M and Wang, Weiming and Dong, Ligang and Gopal, Ram and Halpern, Joel M},
+  journal={RFC},
+  volume={5810},
+  pages={1--124},
+  year={2010}
+}
+
+@article{mckeown2008openflow,
+  title={OpenFlow: enabling innovation in campus networks},
+  author={McKeown, Nick and Anderson, Tom and Balakrishnan, Hari and Parulkar, Guru and Peterson, Larry and Rexford, Jennifer and Shenker, Scott and Turner, Jonathan},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={38},
+  number={2},
+  pages={69--74},
+  year={2008},
+  publisher={ACM New York, NY, USA}
+}
+
 @manual{apistelefonica,
 	Author = "Telefonica SA",
 	Title = "APIS Telefonica",
@@ -142,13 +234,6 @@
   title={532--“Microwave Information Model”, Version 1.0},
   author={TR, ONF},
   year={2016}
-}
-
-@book{edelman2018network,
-  title={Network Programmability and Automation: Skills for the Next-Generation Network Engineer},
-  author={Edelman, Jason and Lowe, Scott S and Oswalt, Matt},
-  year={2018},
-  publisher={" O'Reilly Media, Inc."}
 }
 
 @article{varga2018internet,
