Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,17 @@
 
 
 %% Saved with string encoding Unicode (UTF-8)
+@article{lopez2018control,
+  title={Control plane architectures for elastic optical networks},
+  author={L{\'o}pez, V{\'\i}ctor and Jim{\'e}nez, Rodrigo and de Dios, {\'O}scar Gonz{\'a}lez and Fern{\'a}ndez-Palacios, Juan Pedro},
+  journal={Journal of Optical Communications and Networking},
+  volume={10},
+  number={2},
+  pages={A241--A249},
+  year={2018},
+  publisher={Optical Society of America}
+}
+
 @inproceedings{bemby2015vino,
   title={ViNO: SDN overlay to allow seamless migration across heterogeneous infrastructure},
   author={Bemby, Spandan and Lu, Hongbin and Zadeh, Khashayar Hossein and Bannazadeh, Hadi and Leon-Garcia, Alberto},
