Updates from Overleaf

--- a/SDTN_Networks_v2.tex
+++ b/SDTN_Networks_v2.tex
@@ -735,13 +735,11 @@ In the IP domain, however, given the different models implemented on the IP Cont
 \label{TAB:discovered_elements}
 \end{table*}
 
-
-
 \subsection{Single-domain IP L2VPN provisioning}
 
 \begin{figure}
 	\centering
-		\includegraphics[width=\linewidth]{figs/l2vpn_results.png}
+		\includegraphics[width=\linewidth]{figs/l2vpn_results_2.png}
 	\caption{L2VPN service creation results retrieved from the SDTN GUI. Information included three panes: Topology, Service lists and Service Details (Name, Topology and Endpoint).}
 	\label{FIG:L2SM_results}
 \end{figure}
